syntax = "proto3";
import "google/protobuf/empty.proto";

service CustomersService {
	rpc GetAll(google.protobuf.Empty) returns(GetAllCustomersResponse);
	rpc GetCustomer(CustomerId) returns (ProtoCustomer);
	rpc CreateCustomer(CreateCustomerRequest) returns(CustomerId);
	rpc EditCustomer(EditCustomerRequest) returns (CustomerId);
	rpc DeleteCustomer (CustomerId) returns (CustomerId);
}

message CreateCustomerRequest{
	string firstName = 1;
	string lastName = 2;
	string email = 3;
	repeated PreferncesIds preferncesIds = 4;
}

message EditCustomerRequest{
	string id = 5;
	string firstName = 1;
	string lastName = 2;
	string email = 3;
	repeated PreferncesIds preferncesIds = 4;
}

message PreferncesIds{
	string preferenceId = 1;
}

message CustomerId{
	string customerId = 1;    
}

message GetAllCustomersResponse{
	repeated ProtoCustomer customers = 1;    
}  

message ProtoCustomer{
	string firstName = 1;
	string secondName = 2;
	string email = 3;
}